# sdlgame

./: .gitignore  CMakeLists.txt  README.md
include/: renderer.hpp  sdl.hpp  surface.hpp  surface_view.hpp  texture.hpp  weak_surface.hpp  window.hpp
src/: main.cpp
